:lipstick: Fix logo size on small screens

--- a/styles/input.css
+++ b/styles/input.css
@@ -13,7 +13,7 @@
 }
 
 .nav-logo {
-    @apply w-10 mr-5 
+    @apply w-12 mr-5 
 }
 
 .nav-links {
