--- a/styles/output.css
+++ b/styles/output.css
@@ -31936,7 +31936,7 @@ video {
 
 .nav-logo {
   margin-right: 1.25rem;
-  width: 2.5rem
+  width: 3rem
 }
 
 .nav-links {
